--- a/.gitignore
+++ b/.gitignore
@@ -200,3 +200,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,intellij,kotlin
+/.gradle/
+/.idea/
+/build/
